--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
