--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,9 @@
     "express": "^4.21.2",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
+    "mongoose": "^7.6.3",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "whatwg-url": "^14.2.0"
   }
 }
