--- a/pharmacy/package.json
+++ b/pharmacy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "pharmacy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,21 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.8",
     "firebase": "^11.4.0",
-    "jspdf": "^3.0.0",
-    "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.9",
-    "react-bootstrap-icons": "^1.11.5",
-    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
-    "web-vitals": "^2.1.4",
-    "yocto-queue": "^1.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
