--- a/pharmacy/package.json
+++ b/pharmacy/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
