--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.6.2",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
@@ -19,6 +20,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
